--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
             <div class="top-section menu desktop-menu">
                 <ul class="menu-list">
                     <li id="today">
-                        <a href="#" id="today" data-name="Today" data-is-active="true">
-                            <div class="today-icon" data-icon-type="solid">
+                        <a href="#" id="today" data-name="Today" data-is-active="true"> <!-- change to false -->
+                            <div class="today-icon" data-icon-type="solid"> <!-- change to line -->
                                 <svg xmlns="http://www.w3.org/2000/svg" id="line-today-calendar" data-icon-type="line" viewBox="0 0 24 24" width="512" height="512">
                                     <path d="m8,12h-2c-1.103,0-2,.897-2,2v2c0,1.103.897,2,2,2h2c1.103,0,2-.897,2-2v-2c0-1.103-.897-2-2-2Zm-2,4v-2h2v2s-2,0-2,0ZM19,2h-1v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-8v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-1C2.243,2,0,4.243,0,7v12c0,2.757,2.243,5,5,5h14c2.757,0,5-2.243,5-5V7c0-2.757-2.243-5-5-5Zm-14,2h14c1.654,0,3,1.346,3,3v1H2v-1c0-1.654,1.346-3,3-3Zm14,18H5c-1.654,0-3-1.346-3-3v-9h20v9c0,1.654-1.346,3-3,3Z"></path>
                                 </svg>
@@ -96,11 +96,11 @@
                     <button class="add-button" data-menu="addProject"> + Add Project </button>
                 </div>
 
-                <div class="bottom-add-project-section projects-container">
+                <div class="bottom-add-project-section projects-container" id="projects-container">
                     <!-- items -->
-                     <div class="project-cards" data-project-id="1" data-is-active="false">
+                     <div class="project-cards" data-project-id="0" data-is-active="false">
                         <div class="project-cards-icon" data-color="default">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#c93d5b">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px">
                                 <path d="m239-160 40-159H120l15-60h159l51-202H186l15-60h159l39-159h59l-39 159h203l39-159h59l-39 159h159l-15 60H666l-51 202h159l-15 60H600l-40 159h-59l40-159H338l-40 159h-59Zm114-219h203l51-202H404l-51 202Z"/>
                             </svg>
                         </div>
@@ -109,7 +109,19 @@
                             <p class="items" data-list-id="1"> 5 </p>
                         </div>
                      </div>
+                     <div class="project-cards" data-project-id="0" data-is-active="false">
+                        <div class="project-cards-icon" data-color="blue">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px">
+                                <path d="m239-160 40-159H120l15-60h159l51-202H186l15-60h159l39-159h59l-39 159h203l39-159h59l-39 159h159l-15 60H666l-51 202h159l-15 60H600l-40 159h-59l40-159H338l-40 159h-59Zm114-219h203l51-202H404l-51 202Z"/>
+                            </svg>
+                        </div>
+                         <div class="project-description">
+                            <p class="project-title" data-name="Web Development"> Web Designing </p>
+                            <p class="items" data-list-id="2"> 5 </p>
+                        </div>
+                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -230,7 +242,27 @@
 
              </div>
         </section>
-        
+
+        <dialog class="modal my-project-dialog" open>
+            <button class="close">x</button>
+            <form action="">
+                <div class="project-name-input">
+                    <label for="project-name">Project Name</label>
+                    <!-- can be change to name="project-name" -->
+                    <input type="text" id="project-name" name="projectName" placeholder="Grocery" required>
+                </div>
+                <div class="color-picker">
+                    <input type="radio" id="color" name="color" value="default" checked>
+                    <input type="radio" id="color" name="color" value="red">
+                    <input type="radio" id="color" name="color" value="green">
+                    <input type="radio" id="color" name="color" value="blue">
+                    <input type="radio" id="color" name="color" value="purple">
+                    <input type="radio" id="color" name="color" value="yellow">
+                </div>
+                <button type="submit">Create</button>
+            </form>
+        </dialog>
+
     </main>
 </body>
 </html>
