--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             <div class="top-section menu desktop-menu">
                 <ul class="menu-list">
                     <li id="today">
-                        <a href="#" id="today" data-name="Today" data-is-active="true"> <!-- change to false -->
+                        <a href="#" id="today" data-name="Today" data-is-active="true"> <!-- NOTE: change to false. This will turn to turn when the user first time visit the page -->
                             <div class="today-icon" data-icon-type="solid"> <!-- change to line -->
                                 <svg xmlns="http://www.w3.org/2000/svg" id="line-today-calendar" data-icon-type="line" viewBox="0 0 24 24" width="512" height="512">
                                     <path d="m8,12h-2c-1.103,0-2,.897-2,2v2c0,1.103.897,2,2,2h2c1.103,0,2-.897,2-2v-2c0-1.103-.897-2-2-2Zm-2,4v-2h2v2s-2,0-2,0ZM19,2h-1v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-8v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-1C2.243,2,0,4.243,0,7v12c0,2.757,2.243,5,5,5h14c2.757,0,5-2.243,5-5V7c0-2.757-2.243-5-5-5Zm-14,2h14c1.654,0,3,1.346,3,3v1H2v-1c0-1.654,1.346-3,3-3Zm14,18H5c-1.654,0-3-1.346-3-3v-9h20v9c0,1.654-1.346,3-3,3Z"></path>
@@ -132,7 +132,7 @@
                 <div class="top-section-content">
                     <div class="top-section-wrapper">
                         <div class="title">
-                            <p class="project-title" data-name="Today">Today</p> <!-- users current page -->
+                            <p class="project-title" data-name="Today">Today</p> <!-- NOTE: users current page -->
                             <div class="edit-title" data-project-id="none" data-memu-title="edit">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="512" height="512">
                                     <path d="M18.656.93,6.464,13.122A4.966,4.966,0,0,0,5,16.657V18a1,1,0,0,0,1,1H7.343a4.966,4.966,0,0,0,3.535-1.464L23.07,5.344a3.125,3.125,0,0,0,0-4.414A3.194,3.194,0,0,0,18.656.93Zm3,3L9.464,16.122A3.02,3.02,0,0,1,7.343,17H7v-.343a3.02,3.02,0,0,1,.878-2.121L20.07,2.344a1.148,1.148,0,0,1,1.586,0A1.123,1.123,0,0,1,21.656,3.93Z"/>
