--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,23 @@
             <!-- menu section (desktop) -->
             <div class="top-section menu desktop-menu">
                 <ul class="menu-list">
+                    <!-- inbox -->
+                    <li id="inbox">
+                        <a href="#" id="inbox" data-name="Inbox" data-is-active="true">
+                            <div class="inbox-task" data-icon-type="solid">
+                                <svg xmlns="http://www.w3.org/2000/svg" id="line-inbox-task" data-icon-type="line" viewBox="0 0 24 24">
+                                    <path d="m23.837,11.479l-1.852-10.65c-.095-.544-.611-.907-1.157-.814-.544.095-.909.613-.814,1.157l1.852,10.65c.01.059.014.119.023.178h-3.89c-1.103,0-2,.897-2,2s-.897,2-2,2h-4c-1.103,0-2-.897-2-2s-.897-2-2-2h-3.89c.009-.059.013-.12.023-.179L3.985,1.171c.095-.544-.27-1.062-.814-1.157-.548-.093-1.062.271-1.157.814L.163,11.478c-.082.469-.163,1.785-.163,1.885v5.637c0,2.757,2.243,5,5,5h14c2.757,0,5-2.243,5-5v-5.637c0-.1-.081-1.417-.163-1.885Zm-4.837,10.521H5c-1.654,0-3-1.346-3-3v-5h4c0,2.206,1.794,4,4,4h4c2.206,0,4-1.794,4-4h4v5c0,1.654-1.346,3-3,3ZM6.22.818c.088-.474.501-.818.983-.818h9.604c.482,0,.896.344.984.819.113.614-.359,1.181-.984,1.181H7.204c-.625,0-1.097-.567-.983-1.182Zm-1.48,8c.088-.474.501-.818.983-.818h12.556c.482,0,.896.344.984.819.113.614-.359,1.181-.984,1.181H5.724c-.625,0-1.097-.567-.983-1.182Zm.74-4c.088-.474.501-.818.983-.818h11.08c.482,0,.896.344.984.819.113.614-.359,1.181-.984,1.181H6.464c-.625,0-1.097-.567-.983-1.182Z"/>
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" id="solid-inbox-task" data-icon-type="solid" viewBox="0 0 24 24">
+                                    <path d="m6,14c1.091,0,1.98.877,2,1.963.02,1.105.807,2.037,1.912,2.037h4.176c1.106,0,1.892-.931,1.912-2.037.02-1.086.909-1.963,2-1.963h6c0-1.056-.091-2.109-.272-3.149l-1.166-6.708c-.416-2.395-2.495-4.143-4.926-4.143H6.364C3.933,0,1.854,1.748,1.438,4.143L.272,10.85c-.181,1.04-.272,2.094-.272,3.15h0s6,0,6,0Zm-.76-10h13.523c.482,0,.896.344.984.819.113.614-.359,1.181-.984,1.181H5.24c-.625,0-1.097-.567-.983-1.182.088-.474.501-.818.983-.818Zm-.74,4h14.999c.482,0,.896.344.984.819.113.614-.359,1.181-.984,1.181H4.5c-.625,0-1.097-.567-.983-1.182.088-.474.501-.818.983-.818Zm19.5,8v3c0,2.757-2.243,5-5,5H5c-2.757,0-5-2.243-5-5v-3h6c0,2.206,1.794,4,4,4h4c2.206,0,4-1.794,4-4h6Z"/>
+                                </svg>
+                            </div>
+                            <span>Inbox</span>
+                        </a>
+                    </li>
                     <li id="today">
-                        <a href="#" id="today" data-name="Today" data-is-active="true"> <!-- NOTE: change to false. This will turn to turn when the user first time visit the page -->
-                            <div class="today-icon" data-icon-type="solid"> <!-- change to line -->
+                        <a href="#" id="today" data-name="Today" data-is-active="false">
+                            <div class="today-icon" data-icon-type="line">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="line-today-calendar" data-icon-type="line" viewBox="0 0 24 24" width="512" height="512">
                                     <path d="m8,12h-2c-1.103,0-2,.897-2,2v2c0,1.103.897,2,2,2h2c1.103,0,2-.897,2-2v-2c0-1.103-.897-2-2-2Zm-2,4v-2h2v2s-2,0-2,0ZM19,2h-1v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-8v-1c0-.552-.447-1-1-1s-1,.448-1,1v1h-1C2.243,2,0,4.243,0,7v12c0,2.757,2.243,5,5,5h14c2.757,0,5-2.243,5-5V7c0-2.757-2.243-5-5-5Zm-14,2h14c1.654,0,3,1.346,3,3v1H2v-1c0-1.654,1.346-3,3-3Zm14,18H5c-1.654,0-3-1.346-3-3v-9h20v9c0,1.654-1.346,3-3,3Z"></path>
                                 </svg>
@@ -43,8 +57,8 @@
                             <span>Today</span>
                         </a>
                     </li>
-                    <li id="upcoming">
-                        <a href="#" id="upcoming" data-name="Upcoming" data-is-active="false">
+                    <li id="pending">
+                        <a href="#" id="pending" data-name="Pending" data-is-active="false">
                             <div class="calendar-icon" data-icon-type="line">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="line-calendar" data-icon-type="line" viewBox="0 0 24 24" width="512" height="512">
                                     <path d="M19,2H18V1a1,1,0,0,0-2,0V2H8V1A1,1,0,0,0,6,1V2H5A5.006,5.006,0,0,0,0,7V19a5.006,5.006,0,0,0,5,5H19a5.006,5.006,0,0,0,5-5V7A5.006,5.006,0,0,0,19,2ZM2,7A3,3,0,0,1,5,4H19a3,3,0,0,1,3,3V8H2ZM19,22H5a3,3,0,0,1-3-3V10H22v9A3,3,0,0,1,19,22Z"></path>
@@ -58,19 +72,6 @@
                                 </svg>
                             </div>
                             <span>Upcoming</span>
-                        </a>
-                    </li>
-                    <li id="completed">
-                        <a href="#" id="completed" data-name="Completed" data-is-active="false">
-                            <div class="complete-task" data-icon-type="line">
-                                <svg xmlns="http://www.w3.org/2000/svg" id="line-complete-task" data-icon-type="line" viewBox="0 0 24 24" width="512" height="512">
-                                    <path d="m16.298,8.288l1.404,1.425-5.793,5.707c-.387.387-.896.58-1.407.58s-1.025-.195-1.416-.585l-2.782-2.696,1.393-1.437,2.793,2.707,5.809-5.701Zm7.702,3.712c0,6.617-5.383,12-12,12S0,18.617,0,12,5.383,0,12,0s12,5.383,12,12Zm-2,0c0-5.514-4.486-10-10-10S2,6.486,2,12s4.486,10,10,10,10-4.486,10-10Z"/>
-                                </svg>
-                                <svg xmlns="http://www.w3.org/2000/svg" id="solid-complete-task" data-icon-type="solid" viewBox="0 0 24 24" width="512" height="512">
-                                    <path d="m12,0C5.383,0,0,5.383,0,12s5.383,12,12,12,12-5.383,12-12S18.617,0,12,0Zm-.091,15.419c-.387.387-.896.58-1.407.58s-1.025-.195-1.416-.585l-2.782-2.696,1.393-1.437,2.793,2.707,5.809-5.701,1.404,1.425-5.793,5.707Z"/>
-                                </svg>
-                            </div>
-                            <span>Completed</span>
                         </a>
                     </li>
                     <li class="overdue">
@@ -132,7 +133,7 @@
                 <div class="top-section-content">
                     <div class="top-section-wrapper">
                         <div class="title">
-                            <p class="project-title" data-name="Today">Today</p> <!-- NOTE: users current page -->
+                            <p class="project-title" data-name="Inbox">Inbox</p> <!-- NOTE: users current page -->
                             <div class="edit-title" data-project-id="none" data-memu-title="edit">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="512" height="512">
                                     <path d="M18.656.93,6.464,13.122A4.966,4.966,0,0,0,5,16.657V18a1,1,0,0,0,1,1H7.343a4.966,4.966,0,0,0,3.535-1.464L23.07,5.344a3.125,3.125,0,0,0,0-4.414A3.194,3.194,0,0,0,18.656.93Zm3,3L9.464,16.122A3.02,3.02,0,0,1,7.343,17H7v-.343a3.02,3.02,0,0,1,.878-2.121L20.07,2.344a1.148,1.148,0,0,1,1.586,0A1.123,1.123,0,0,1,21.656,3.93Z"/>
