--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-</head>
+<script defer src="main.js"></script></head>
 <body data-dialog-active="false">
     <main class="todo-list-container">
         <div class="sidebar-menu desktop-menu" data-is-active="true">
